--- a/kavholm-express-api/package.json
+++ b/kavholm-express-api/package.json
@@ -9,6 +9,7 @@
     "dev-win": "set NODE_ENV=dev && nodemon server.js",
     "test": "jest -i",
     "test:app": "jest -i app.test.js",
+    "test:booking": "jest -i bookings.test.js",
     "test:config": "jest -i config.test.js",
     "test:middleware": "jest -i middleware/",
     "test:middleware:permissions": "jest -i middleware/permissions.test.js",
